# obsidian-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE.md  pyproject.toml
src/obsidian_mcp/: __init__.py  config.py  daily.py  memory.py  parser.py  rest_api.py  search.py  server.py  templates.py  vault.py
tests/: conftest.py  test_config.py  test_memory.py  test_parser.py  test_search.py  test_vault.py
