[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-mcp"
version = "0.1.0"
description = "MCP server for Obsidian vault integration - lets AI agents read, write, search, and manage Obsidian notes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
keywords = ["mcp", "obsidian", "notes", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[project.scripts]
obsidian-mcp = "obsidian_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_mcp"]
